# sll

./: .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js
.github/workflows/: main.yml
_modules/: index.html
_modules/sll385/: LinkedList.html
docs/: conf.py  index.rst  overview.rst  reference.rst
sll/: LinkedList.py
tests/: test_LinkedList.py
