[tool.poetry]
name = "sll"
version = "0.1.0"
description = "Turn regular python lists into singly linked lists"
authors = ["Tanner Oates <tanner.oates97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.6"
wrapt = "^1.14.1"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
