[tool.poetry]
name = "sll385"
version = "0.1.1"
description = "Turn regular python lists into singly linked lists"
authors = ["Tanner Oates <tanner.oates97@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = { version = "^7.2.0", optional = true }
sphinx = { version = "^5.3.0", optional = true }
sphinx-rtd-theme = { version = "^1.1.1", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.6"
wrapt = "^1.14.1"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
pytest = "^7.2.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
